...
            "state": "translated",
            "value": "Tipo conto"
          }
        }
      }
    },
    "Accounts": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Konten"
          }
...
            "state": "translated",
            "value": "Attivo"
          }
        }
      }
    },
    "Add": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Hinzufügen"
          }
...
            "state": "translated",
            "value": "Aggiungi una transazione ricorrente per vederla qui"
          }
        }
      }
    },
    "Add account": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Konto hinzufügen"
          }
...
            "state": "translated",
            "value": "Agregar existente"
          }
        }
      }
    },
    "Add Existing Loan": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Bestehenden Kredit hinzufügen"
          }
...
            "state": "translated",
            "value": "Bimestrale"
          }
        }
      }
    },
    "Budget": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Budget"
          }
...
            "state": "translated",
            "value": "Risultati del calcolo"
          }
        }
      }
    },
    "Cancel": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Stornieren"
          }
...
            "state": "translated",
            "value": "Crea account per vedere il tuo patrimonio netto."
          }
        }
      }
    },
    "Create Budget": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Budget erstellen"
          }
...
            "state": "translated",
            "value": "Salute"
          }
        }
      }
    },
    "Hide amounts": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Beträge ausblenden"
          }
...
            "state": "translated",
            "value": "Importa OFX"
          }
        }
      }
    },
    "Import OFX...": {
      "localizations": {
        "it": {
          "stringUnit": {
            "state": "translated",
            "value": "Importa OFX..."
          }
...
            "state": "translated",
            "value": "Prestito"
          }
        }
      }
    },
    "Loan Calculator": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Kreditrechner"
          }
...
            "state": "translated",
            "value": "Nessun risultato"
          }
        }
      }
    },
    "No scheduled transactions": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Keine geplanten Transaktionen"
          }
...
            "state": "translated",
            "value": "Reddito da affitto"
          }
        }
      }
    },
    "Reports": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Berichte"
          }
...
            "state": "translated",
            "value": "Imposta saldo iniziale"
          }
        }
      }
    },
    "Settings": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Einstellungen"
          }
...
            "state": "translated",
            "value": "Mostra tutte le transazioni pianificate"
          }
        }
      }
    },
    "Show amounts": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Beträge anzeigen"
          }
...
